# reports-master

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
docs/: index.html
docs/assets/: site.css
scripts/: cargo-msvc.ps1  check-windows-prereqs.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: main.rs
src/lib/: ai.ts  classes.ts  csv.ts  export.ts  generator.ts  pronouns.ts  storage.ts  types.ts
tests/: classes.test.ts  csv.test.ts  generator.test.ts  pronouns.test.ts
