[package]
name = "reports-master"
version = "0.1.0"
description = "Local-first teacher report drafting app"
authors = ["Reports Master"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
